--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
     <div class="panel panel-default">
         <h4>GREENFIELD</h4>
         <div class="panel-body">
-            <p><a href="~/Gadata/TipstatusWebgrid" class="btn btn-primary btn-sm">Tipstatus &raquo;</a>
+            <p><a href="~/NgacElectrode/CurrentTipstatus" class="btn btn-primary btn-sm">Tipstatus &raquo;</a>
             Huidige elektrode status inclusief een voorspelling van het aantal nog te lassen wagens</p>
             <p><a href="~/Gadata/Stowebgrid" class="btn btn-primary btn-sm">STO &raquo;</a>
             Data van de PLC actieve storingen</p>
@@ -77,6 +77,11 @@
             <p>
                 <a href="~/Pdf/RenderPdf" class="btn btn-primary btn-sm">PDfRender &raquo;</a>
                 Test embedded pdf files pdf.js
+            </p>
+
+            <p>
+                <a href="~/NgacElectrode/index" class="btn btn-primary btn-sm">Electrode &raquo;</a>
+                Electrode index
             </p>
 
         </div>
