--- a/EqUiWebUi/Views/Gadata/StoWebgrid.cshtml
+++ b/EqUiWebUi/Views/Gadata/StoWebgrid.cshtml
@@ -86,7 +86,7 @@
     columns.Add(c => c.Logcode).Titled("Logcode");
     columns.Add(c => c.logtext).Titled("Logtext");
     columns.Add(c => c.Downtime).Titled("DT");
-    columns.Add(c => c.timestamp).Titled("Time").Formatted("{0:hh:mm:ss}");
+    columns.Add(c => c.timestamp).Titled("Time").Formatted("{0:HH:mm:ss}");
     columns.Add(c => c.Classification).Titled("Class");
     columns.Add(c => c.Subgroup).Titled("Subgroup");
     columns.Add(c => c.Logtype).Titled("Logtype").Filterable(true);
