--- a/EqUiWebUi/Views/Maximo/Index.cshtml
+++ b/EqUiWebUi/Views/Maximo/Index.cshtml
@@ -1,12 +1,10 @@
 ﻿@{
     ViewBag.Title = "Index";
 }
+<script src="~/Scripts/jquery-3.2.1.js"></script>
 <div class="container body-content">
     <h2>Index</h2>
 </div>
-
-    <script src="~/Scripts/jquery-3.2.1.min.js"></script>
-
 
     <script type="text/javascript">
         $(document).ready(function () {
