--- a/EqUiWebUi/Views/Maximo/workorders.cshtml
+++ b/EqUiWebUi/Views/Maximo/workorders.cshtml
@@ -2,9 +2,7 @@
 @{
     ViewBag.Title = "Workorders";
 }
-
-<script src="~/Scripts/jquery-3.2.1.min.js"></script>
-
+<script src="~/Scripts/jquery-3.2.1.js"></script>
 <script type="text/javascript">
 
     @*run on doc ready *@
