--- a/EqUiWebUi/Views/NgacElectrode/Index.cshtml
+++ b/EqUiWebUi/Views/NgacElectrode/Index.cshtml
@@ -19,6 +19,10 @@
                 <a href="~/NgacElectrode/TipwearBeforeChange" class="btn btn-primary btn-sm">Lijst met gewisselde elektrodes &raquo;</a>
                 Weergave van waar er elektrodes gewisseld zijn geweest.
             </p>
+            <p>
+                <a href="~/NgacElectrode/PlanTipChange" class="btn btn-primary btn-sm">Plan tipchange &raquo;</a>
+                Onderhoudplannen
+            </p>
         </div>
     </div>
 
