--- a/EqUiWebUi/Views/Settings/GetUserGrants.cshtml
+++ b/EqUiWebUi/Views/Settings/GetUserGrants.cshtml
@@ -13,9 +13,11 @@
                     @Html.Grid(Model).Named("DataGrid").Build(columns =>
                {
                    columns.Add(c => c.username).Titled("Username").Filterable(true);
+                   columns.Add(c => c.LocationRoot).Titled("LocationRoot").Filterable(true);
+                   columns.Add(c => c.AssetRoot).Titled("AssetRoot").Filterable(true);
                    columns.Add(c => c.Role).Titled("Role").Filterable(true);
                    columns.Add(c => c.Description).Titled("Description");
-            //     columns.Add(c => c.GrantedOn);
+                   //     columns.Add(c => c.GrantedOn);
                    columns.Add(c => c.GrantedBy).Titled("GrandedBy").Filterable(true);
                })
                 .Sortable()
