--- a/EqUiWebUi/Views/Maximo/WoDetails.cshtml
+++ b/EqUiWebUi/Views/Maximo/WoDetails.cshtml
@@ -2,8 +2,7 @@
 @{
     ViewBag.Title = "WoDetails";
 }
-<script src="~/Scripts/jquery-3.2.1.min.js"></script>
-
+<script src="~/Scripts/jquery-3.2.1.js"></script>
 <script type="text/javascript">
 
     @*run on doc ready *@
