--- a/EqUiWebUi/Views/Shared/MvcGrid/_Grid.cshtml
+++ b/EqUiWebUi/Views/Shared/MvcGrid/_Grid.cshtml
@@ -16,11 +16,15 @@
                         data-filter="@column.IsFilterable"
                         data-filter-name="@column.FilterName"
                         data-filter-multi="@column.IsMultiFilterable"
-                        data-filter-first-type="@column.Filter?.First?.Type"
-                        data-filter-first-val="@column.Filter?.First?.Value"
-                        data-filter-operator="@column.Filter?.Operator"
-                        data-filter-second-type="@column.Filter?.Second?.Type"
-                        data-filter-second-val="@column.Filter?.Second?.Value"
+                        data-filter-first-type="@(column.Filter != null && column.Filter.First != null
+                            ? column.Filter.First.Type : "")"
+                        data-filter-first-val="@(column.Filter != null && column.Filter.First != null
+                            ? column.Filter.First.Value : "")"
+                        data-filter-operator="@(column.Filter != null ? column.Filter.Operator : "")"
+                        data-filter-second-type="@(column.Filter != null && column.Filter.Second != null
+                            ? column.Filter.Second.Type : "")"
+                        data-filter-second-val="@(column.Filter != null && column.Filter.Second != null
+                            ? column.Filter.Second.Value : "")"
                         data-sort="@column.IsSortable"
                         data-sort-order="@column.SortOrder"
                         data-sort-first="@column.FirstSortOrder">
