playing with styles

--- a/EqUiWebUi/Views/NgacElectrode/PlanTipChange.cshtml
+++ b/EqUiWebUi/Views/NgacElectrode/PlanTipChange.cshtml
@@ -10,103 +10,111 @@
             <h4>Tipchange toolbox</h4>
         </div>
 
-
         <div class="panel-body">
-            @*plan false
-                gebruiker geeft in het formulier waar en met welke voorwaardes hij elektrodes wil wisselen*@
-            <div class="panel panel-default">
+                    @*plan false
+                    gebruiker geeft in het formulier waar en met welke voorwaardes hij elektrodes wil wisselen*@
+                 <div class="panel panel-default">
 
-                <div class="panel-heading">
-                    <h4>Plan het onderhoud</h4>
-                </div>
+                        <div class="panel-heading">
+                            <h4>Plan het onderhoud</h4>
+                        </div>
 
-                <div class="panel-body">
-                    <form>
-                        <div class="form-group">
-                            <div class="col-md-4">
-                                <label class="col-md-4 control-label" for="location">location</label>
-                                <select id="location" name="Selecteer locatie" class="form-control">
-                                    <option value="A LIJN 33">Floor</option>
-                                    <option value="A LIJN 331">FS</option>
-                                    <option value="A LIJN 334">FF</option>
-                                    <option value="A LIJN 336">RF</option>
-                                    <option value="A LIJN 338">MAR</option>
-                                </select>
+                        <div class="panel-body">
+
+                            <div class="row">
+                                    <div class="col-sm-5">
+                                        <label class="control-label col-sm-4"" for="location">Op locatie</label>
+                                        <div class="col-sm-8">
+                                            <select class="form-control input-sm" id="location" name="Selecteer locatie">
+                                                <optgroup label="CMA UB12 floorline">
+                                                    <option value="A LIJN 33">Floor (all)</option>
+                                                    <option value="A LIJN 331">Frontstructure</option>
+                                                    <option value="A LIJN 334">Frontfloor</option>
+                                                    <option value="A LIJN 336">Rearfloor</option>
+                                                    <option value="A LIJN 338">Marriage</option>
+                                                </optgroup>
+                                                <optgroup label="CMA Sides">
+                                                    <option value="A LIJN 35">Sides (all)</option>
+                                                </optgroup>
+                                                <optgroup label="CMA Preassembly">
+                                                    <option value="A LIJN 32">A LIJN 32%</option>
+                                                </optgroup>
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
+
+                             @*sam snapt het niet....*@
+                            <div class="row"><a>.</a></div>    
+
+                            <div class="row">
+                                    <div class="col-sm-5">
+                                        <label class="control-label col-sm-8" for="minwear">waar de wear groter is dan</label>
+                                        <div class="col-sm-4">
+                                            <input class="form-control input-sm" type="number" min="0" max="100" step="5" value="25" id="minwear" />
+                                        </div>
+                                    </div>
+
+                                    <div class="col-sm-7" >
+                                        <label class="control-label col-sm-8" for="minparts">of minimum resterende stukken kleiner dan</label>
+                                        <div class="col-sm-4">
+                                            <input class="form-control input-sm" type="number" min="0" step="10" value="200" id="minparts" />
+                                        </div>
+                                    </div>
+                               </div>
+                        </div>
+
+                        <div class="panel-footer">
+                            <button class="btn-sm btn-primary" id="loadLocations">Zoek</button>
+                        </div>
+                 </div>
+                @****************************************************************************************************************************@
+
+                @*DO Hier word de lijst getoond met waar er moet gewisselde worden*@
+                <div class="panel panel-default" id="tipsToChangeContainer" style="display:none">
+
+                    <div class="panel-heading">
+                        <div class="row">
+                            <h4 class="col-sm-6">Deze robots moeten gewisseld worden.</h4>
+                            <div class="col-sm-3" style="float:right">
+                              <input class="form-control input-sm" type="datetime-local" id="changeStartlistDatepicker" />
                             </div>
                         </div>
-
-                        @*SDB enable disable toevoegen voor de verschillende faktoren*@
-                        <div class="form-group">
-                            <div class="col-md-4">
-                                <label class="col-md-4 control-label" for="minwear">waar wear groter dan</label>
-                                <input class="form-control input-md" type="number" min="0" max="100" step="5" value="30" id="minwear" />
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <div class="col-md-4">
-                                <label class="col-md-4 control-label" for="minparts">of minium resterende stukken</label>
-                                <input class="form-control input-md" type="number" min="0" step="10" value="200" id="minparts" />
-                            </div>
-                        </div>
-                    </form>
-                </div>
-
-                <div class="panel-footer">
-                    <button class="btn-sm btn-primary" id="loadLocations">Zoek</button>
-                </div>
-            </div>
-
-        </div>
-
-        @*DO
-            Hier word de lijst getoond met waar er moet gewisselde worden*@
-        <div class="panel-body" id="tipsToChangeContainer" style="display:none">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    
-                    <div class="col-lg-12">
-
-                        <h5>Deze robots moeten gewisseld worden.</h5>
-                        <div class='input-group date' id='datetimepicker1'>
-                            <input type='text' class="form-control" />
-                            <span class="input-group-addon">
-                                <span class="glyphicon glyphicon-calendar"></span>
-                            </span>
-                        </div>
-
-
                     </div>
 
-                </div>
+                    <div class="panel-body" id="tipsToChangecontainer" style="position:relative">
+                         <div id="tipsToChange" style="display:none">result wil be here</div>
+                    </div>
 
-                <div id="spincontainer" class="panel-body">
-                    <div id="tipsToChange" style="display:none">result wil be here</div>
+                    <div class="panel-footer">
+                        <button class="btn-sm btn-primary" id="loadverification">Verificatie</button>
+                        <a href="~/NgacElectrode/Index" class="btn-sm btn-success" style="float:right">Print &raquo;</a>
+                    </div>
                 </div>
+                @****************************************************************************************************************************@
 
-                <div class="panel-footer">
-                    <a href="~/NgacElectrode/Index" class="btn-sm btn-success">Print &raquo;</a>
+                @*CHECK Hier moet een soort van bevestiging komen. user moet elke keer op refresh duwen en crossmatch met lijst van hierboven
+                gebruik refernetie timestime van hierboven.*@
+                <div class="panel panel-default" id="tipsChangedContainer" style="display:none">
+
+                    <div class="panel-heading">
+                        <div class="row">
+                            <h4 class="col-sm-6">Deze wissels zijn gedetecteerd.</h4>
+                            <div class="col-sm-3" style="float:right">
+                                <input class="form-control input-sm" type="datetime-local" id="changeDonelistDatepicker" />
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="panel-body" id="tipsChangedcontainer" style="position:relative">
+                        <div id="tipsChanged" style="display:none">result wil be here</div>
+                    </div>
+
+                    <div class="panel-footer">
+                        <button class="btn-sm btn-primary" id="loadverification">Refresh</button>
+                    </div>
                 </div>
-            </div>
-        </div>
-
-        @*CHECK
-            Hier moet een soort van bevestiging komen. user moet elke keer op refresh duwen en crossmatch met lijst van hierboven
-            gebruik refernetie timestime van hierboven.*@
-        <div class="panel-body">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h5>Dit is wat er gewisseld is geweest.</h5>
-                </div>
-
-                <div class="panel-body">
-
-                </div>
-
-                <div class="panel-footer">
-                    <a href="~/NgacElectrode/Index" class="btn-sm btn-success">Print &raquo;</a>
-                </div>
-            </div>
+                @****************************************************************************************************************************@
         </div>
 
         <div class="panel-footer">
@@ -116,25 +124,28 @@
 </div>
 
 
-<script type="text/javascript">
-//loading of first container and table
-    var url = '@Url.Action("_TipsToChange")';
-    var spinner = new Spinner();
 
+<script type="text/javascript">
+//loading of first container and table "tips to change"
+    var urlTipsToChange = '@Url.Action("_TipsToChange")';
+    var spinner1 = new Spinner();
     $('#loadLocations').click(function () {
         //disable button
         $('#loadLocations').attr("disabled", true);
         //clear table if its there
         $("#tipsToChange").empty();
+        //set timestamp
+        $("#changeStartlistDatepicker").val(new Date().toJSON().slice(0, 19));
         //start a wait spinner
-        spinner.spin(document.getElementById('spincontainer'));
+        spinner1.spin(document.getElementById('tipsToChangecontainer'));
+
         //first fade in the container (will only fade in on first run)
         $("#tipsToChangeContainer").fadeIn();
         //load partial
             var locationfilter = $('#location').val();
             var minwear = $('#minwear').val();
             var minparts = $('#minparts').val();
-            $("#tipsToChange").load(url,
+            $("#tipsToChange").load(urlTipsToChange,
                 {
                     locationFilter: locationfilter,
                     minWear: minwear,
@@ -145,10 +156,49 @@
                     //fade in the result table
                     $('#tipsToChange').fadeIn(1000,function () {
                         //hide spinner when fade completes
-                        spinner.stop();
+                        spinner1.stop();
                     });
                     //enable button
                     $('#loadLocations').removeAttr("disabled");
+                }
+            );
+    })
+
+//loading of second container and table "change check"
+    var urlTipsChanged = '@Url.Action("_TipsChanged")';
+    var spinner2 = new Spinner();
+    $('#loadverification').click(function () {
+        //disable buttons
+        $('#loadverification').attr("disabled", true);
+        //clear table if its there
+        $("#tipsChanged").empty();
+        //set timestamp
+        $("#changeDonelistDatepicker").val(new Date().toJSON().slice(0, 19));
+        //start a wait spinner
+        spinner2.spin(document.getElementById('tipsChangedcontainer'));
+        //first fade in the container (will only fade in on first run)
+        $("#tipsChangedContainer").fadeIn();
+        //load partial
+            var locationfilter = $('#location').val();
+            var minwear = $('#minwear').val();
+            var minparts = $('#minparts').val();
+            var reportTimestamp = $("#changelistDatepicker").val();
+            $("#tipsChanged").load(urlTipsChanged,
+                {
+                    locationFilter: locationfilter,
+                    minWear: minwear,
+                    minParts: minparts
+                },
+                //this runs when load done
+                function () {
+                    //fade in the result table
+                    $('#tipsChanged').fadeIn(1000,function () {
+                        //hide spinner when fade completes
+                        spinner2.stop();
+                    });
+                    //enable button
+                    $('#loadverification').removeAttr("disabled");
+                    console.log("hit1");
                 }
             );
     })
