--- a/EqUiWebUi/Views/Gadata/PloegRapportWebgrid.cshtml
+++ b/EqUiWebUi/Views/Gadata/PloegRapportWebgrid.cshtml
@@ -113,7 +113,7 @@
 </div>
 
 <div class="modal-content">
-    <div class="dropdown">
+    <div class="dropup">
         <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
             Set a location filter
             <span class="caret"></span>
