--- a/EqUiWebUi/Views/NgacElectrode/TipwearBeforeChange.cshtml
+++ b/EqUiWebUi/Views/NgacElectrode/TipwearBeforeChange.cshtml
@@ -33,8 +33,8 @@
         </div>
 
         <div class="panel-footer">
-            <a href="~/NgacElectrode/Index" class="btn btn-primary">Electrode home &raquo;</a>
-            data from last 30 days
+            <a href="~/NgacElectrode/Index" class="btn-xs btn-primary">Electrode home &raquo;</a>
+            <p style="float:right">(data from last 30 days)</p>
         </div>
     </div>
 </div>
