--- a/EqUiWebUi/Views/NgacElectrode/_TipsToChange.cshtml
+++ b/EqUiWebUi/Views/NgacElectrode/_TipsToChange.cshtml
@@ -1,9 +1,9 @@
 ﻿@model IEnumerable<EqUiWebUi.Models.TipMonitor>
 
-@Html.Grid(Model).Named("DataGrid").Build(columns =>
+@Html.Grid(Model).Named("TipsToChangeTable").Build(columns =>
                     {
                         columns.Add(c => c.Robot).Titled("Robot").Filterable(true);
                         columns.Add(c => c.pWear).Titled("%wear").Filterable(true);
                         columns.Add(c => c.nRspots).Titled("Resterende Spots");
                         columns.Add(c => c.nRcars).Titled("Resterende Stukken");
-                    }).Sortable().Empty("No data found").Css("table-hover")
+                    }).Sortable().Empty("Did not find anything").Css("table-hover")
